--- a/group11-project.ipynb
+++ b/group11-project.ipynb
@@ -1,12 +1,67 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# GROUP 11 project notebook"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# GROUP 11 project notebook"
+    "import matplotlib as plt\n",
+    "import numpy as np\n",
+    "import tensorflow as tf\n",
+    "import tensorflow.keras as keras\n",
+    "import tensorflow.keras.datasets.mnist as mnist\n",
+    "import scipy.spatial.transform as transform\n",
+    "import scipy.stsci.image.translate as sci_translate\n",
+    "import random"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Varioius explanations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Import the necessary data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(x_train, y_train), (x_test, y_test) = mnist.load_data()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_train = x_train / 255.0\n",
+    "x_test = x_test / 255.0\n",
+    "x_train_reshaped = x_train.reshape(60000, 784)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We now do the helper functions."
    ]
   },
   {
@@ -15,17 +70,49 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import matplotlib as plt\n",
-    "import numpy as np"
+    "def padding(img, pad_size):\n",
+    "    return np.pad(img, (pad_size,), constant_values=(0.0,))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def translation(img, shift=None):\n",
+    "    # shift is a tuple\n",
+    "    if shift == None:\n",
+    "        dx = random.randint(0, 6)\n",
+    "        dy = random.randint(0, 6)\n",
+    "        shift = (dx, dy)\n",
+    "    else:\n",
+    "        dx, dy = shift\n",
+    "        if not ( (0 <= dx <= 6) and (0 <= dy <= 6) ):\n",
+    "            raise ValueError(\"The translation is too big\")\n",
+    "    sci.translation(img, dx, dy, cval=0.0)"
    ]
   }
  ],
  "metadata": {
-  "language_info": {
-   "name": "python"
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
   },
-  "orig_nbformat": 4
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.6"
+  }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
